--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     </button>
     <script src="class.js"></script>
+    <script src="main.js"></script>
     <script>
         // let age = 20;
         // console.log(age);
